manifests/4_gke_ingress/envoy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy-alpine:v1.14.1
          ports:
            - name: http
              containerPort: 8083
          volumeMounts:
            - name: config
              mountPath: /etc/envoy
          #   - name: certs
          #     mountPath: /etc/ssl/envoy
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              httpHeaders:
                - name: x-envoy-livenessprobe
                  value: healthz
              port: 8083
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              httpHeaders:
                - name: x-envoy-livenessprobe
                  value: healthz
              port: 8083
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "100M"
            limits:
              cpu: "1"
              memory: "1G"
      volumes:
        - name: config
          configMap:
            name: envoy-config
        # - name: certs
        #   secret:
        #     secretName: envoy-certs
