manifests/4_gke_ingress/envoy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: try-envoy
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: try-envoy-ip
    networking.gke.io/managed-certificates: try-envoy-cert
spec:
  backend:
    serviceName: envoy
    servicePort: 443
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: envoy
              servicePort: 443
